<resources>
    <string name="app_name">MilkPurification</string>
    <string name="retrofit_logging_request">Sending request %s on %s%n%s%s</string>
    <string name="retrofit_logging_response">Received response for %s in %.1fms%n%s</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="retrofit_request_method_type"> Method </string>
    <string name="loading">Loading</string>
    <string name="no">no</string>
    <string name="login">Login</string>
    <string name="phone_number">phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_account">Don\'t have Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cnic">CNIC</string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>